@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-05-16T08:19:23Z",
+  "timestamp" : "2024-05-16T16:23:33Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 759,
+  "count" : 760,
   "uniques" : 375,
   "clones" : [
     {
@@ -70,9 +70,9 @@
     },
     {
       "timestamp": "2024-05-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
