@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 5,
   "clones": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2024-05-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
