@@ -1,3 +1,12 @@
+2024-05-16T16:23:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9115805818 # 278
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-16
+* notice: last 14d: unq all: 5 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 375 759
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 375 760
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2024-05-16]
+
 2024-05-16T08:19:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9108915597 # 277
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-16
